--- a/final/styles/contact.css
+++ b/final/styles/contact.css
@@ -22,7 +22,7 @@ form input[type="email"]:focus {
 }
 
 form button {
-    background-color: #f4a261;
+    background-color: #131211;
     color: #fff;
     border: none;
     cursor: pointer;
@@ -31,7 +31,7 @@ form button {
 
 form button:hover,
 form button:focus {
-    background-color: #e76f51;
+    background-color: #000000;
 }
 
 .confirmation-message {
